Refactored TemporaryFolderManager to automatically create a group folder every unit test.
This means test artifacts for each unit test will be stored in a folder with the name of the unit test.
It simplifies the process of mounting because we don't need to invent a unique, descriptive name for every mounted folder.